# PixelSynth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/PixelSynth/: Hardware.hpp  Midi.hpp  Mixer.hpp  Notes.hpp  Synth.hpp
res/: Images.hpp  Waves.hpp
src/: Main.cpp
src/Hardware/: Device.cpp  HardwareHandler.cpp
src/Mixer/: Mixer.cpp  SimpleMixer.cpp
src/Synth/: Synth.cpp
src/Test/: SineTest.cpp  SurroundTest.cpp
src/UI/ImageHandler/: ImageHandler.cpp  ImageHandler.hpp
src/UI/SimpleSynth/: SSynth.cpp  SSynth.h  SSynthImpl.cpp  SSynthImpl.hpp  SimpleSynth.fbp
src/Util/: NoteFreqCalculator.py
